--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- Header -->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,8 +24,12 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
+
+    <!-- Image of meeting -->
     <div class="hero"></div>
+
+    <!-- Main content -->
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -48,6 +53,8 @@
             </p>
         </div>
     </div>
+
+    <!-- Sidebar -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +78,8 @@
             </p>
         </div>
     </div>
+
+    <!-- Footer -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
