replace div with img

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <!-- Image of meeting -->
-    <div class="hero"></div>
+    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg"/>
 
     <!-- Main content -->
     <div class="content">
