replaced list with navbar

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <!-- Header -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <ul>
-            <li>
+        <nav>
+            <!-- <li> -->
                 <a href="#search-engine-optimization">Search Engine Optimization</a>
-            </li>
-            <li>
+            <!-- </li> -->
+            <!-- <li> -->
                 <a href="#online-reputation-management">Online Reputation Management</a>
-            </li>
-            <li>
+            <!-- </li> -->
+            <!-- <li> -->
                 <a href="#social-media-marketing">Social Media Marketing</a>
-            </li>
-        </ul>
+            <!-- </li> -->
+        </nav>
     </header>
 
     <!-- Image of meeting -->
