--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<em class="seo">seo</em>n</h1>
+        <!-- Navigation bar -->
         <nav>
-            <!-- <li> -->
                 <a href="#search-engine-optimization">Search Engine Optimization</a>
-            <!-- </li> -->
-            <!-- <li> -->
                 <a href="#online-reputation-management">Online Reputation Management</a>
-            <!-- </li> -->
-            <!-- <li> -->
                 <a href="#social-media-marketing">Social Media Marketing</a>
-            <!-- </li> -->
         </nav>
     </header>
 
