--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
     </main>
 
     <!-- Sidebar -->
-    <aside class="benefits">
-        <section class="benefit-lead">
+    <aside>
+        <section>
             <h2>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Clipart of a cog funneling into a coin"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section>
             <h2>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Clipart of a person with a light bulb for a head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section>
             <h2>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Clipart of three coins in front of a cog"/>
             <p>
